Fix hamburger not showing in correct position

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -479,7 +479,7 @@ section > div {
 
 @media (max-width: 768px) {
     .mobile {
-        display: inherit;
+        display: block;
     }
     .pc {
         display: none;
